更新后端接口，添加用户头像上传、用户信息更新功能，优化商品查询逻辑，增加分页支持，修复部分接口权限校验，调整配置文件以支持文件上传限制。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,13 +8,18 @@ spring:
     username: root
     password: 1113
     driver-class-name: com.mysql.cj.jdbc.Driver
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+      enabled: true
 
 mybatis:
   mapper-locations: classpath:/mapper/*
 
 jwt:
   SING: "ptu202212900429" #密钥
-  expireTime: 30 #token有效时间 (分钟)
+  expireTime: 1440 #token有效时间 (分钟)
 pagehelper:
   helper-dialect: mysql
   reasonable: true
